# messages

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  generate-messages.sh  pyproject.toml  readme.md
.github/workflows/: python.yml
cpp/: CMakeLists.txt  battery.pb.cc  battery.pb.h  calibration.pb.cc  calibration.pb.h  covariance.pb.cc  covariance.pb.h  header.pb.cc  header.pb.h  image.pb.cc  image.pb.h  imu.pb.cc  imu.pb.h  jointstate.pb.cc  jointstate.pb.h  library.properties  magneticfield.pb.cc  magneticfield.pb.h  odometry.pb.cc  odometry.pb.h  pose.pb.cc  pose.pb.h  pressure.pb.cc  pressure.pb.h  quaternion.pb.cc  quaternion.pb.h  range.pb.cc  range.pb.h  satnav.pb.cc  satnav.pb.h  transform.pb.cc  transform.pb.h  twist.pb.cc  twist.pb.h  vector3.pb.cc  vector3.pb.h  wrench.pb.cc  wrench.pb.h
cpp/arduino/msgs/: msgs.ino
cpp/examples/: main.cpp
cpp/gtests/: CMakeLists.txt  test.cpp
cpp/src/: db.hpp  enums.hpp  messages.hpp  msgs.hpp
dev/: generate.py  readme.md  test.ipynb  test.py  toml.ipynb  udp.py
dev/c/: cal.h  imu.h  quat.h  vec.h  vecd.h  vecf.h
dev/include/: imu.h  vecd.h  vecf.h
dev/messages/: cal.yivo  imu.yivo  quat.yivo  vec.yivo  vecd.yivo  vecf.yivo
dev/new/: readme.md  toml.ipynb
dev/new/generator/: builtins.py  c_generator.py  py_generator.py  utils.py
dev/new/messages/: calibration_t.toml  global.toml  imu_t.toml  pose_t.toml  quat_t.toml  twist_t.toml  vec_t-save.toml  vec_t.toml  wrench_t.toml
dev/new/templates/: base.cpp.jinja  msg.cpp.jinja  msg.py.jinja
dev/python/: base.py  cal.py  imu.py  quat.py  vec.py  vecd.py  vecf.py
dev/templates/: base.cpp.jinja  base.py.jinja  header.c.jinja2  msg.cpp.jinja  msg.py.jinja  msg2.py.jinja  python.jinja2
docs/: grok.md  mavlink.md
examples/: calibration_t.toml  global.toml  imu_t.toml  json.ipynb  toml.ipynb  types.ipynb  z.toml
examples/cpp/: CMakeLists.txt  calibration_t.hpp  imu_t.hpp  main.cpp  pose_t.hpp  quat_t.hpp  twist_t.hpp  vec_t.hpp  wrench_t.hpp  z.hpp
examples/python/: base.py  calibration_t.py  imu_t.py  pose_t.py  quat_t.py  twist_t.py  vec_t.py  wrench_t.py  z.py
gecko_messages/: __init__.py  builtins.py  c_generator.py  calibration_msgs_pb2.py  calibration_pb2.py  camera_msgs_pb2.py  drone_msgs_pb2.py  files.py  foxglove_msgs_pb2.py  geometry_msgs_pb2.py  header_pb2.py  image_pb2.py  imu_pb2.py  jointstate_pb2.py  kinematic_msgs_pb2.py  license.py  magneticfield_pb2.py  math_msgs_pb2.py  odometry_pb2.py  pressure_pb2.py  py_generator.py  quaternion_pb2.py  range_pb2.py  ranges.py  satnav_pb2.py  sensor_msgs_pb2.py  standard_msgs_pb2.py  transform_pb2.py  tuples.py  twist_pb2.py  types.py  utils.py  vector3_pb2.py
gecko_messages/ros/: battery_pb2.py  covariance_pb2.py  imu_pb2.py  pose_pb2.py  pressure_pb2.py  range_pb2.py  wrench_pb2.py
gecko_messages/templates/: msg.cpp.jinja  msg.py.jinja
messages/: c_generator.py  files.py  py_generator.py  utils.py
messages/templates/: base.py.jinja
proto/: battery.proto  calibration.proto  calibration_msgs.proto  camera_msgs.proto  covariance.proto  drone_msgs.proto  foxglove_msgs.proto  geometry_msgs.proto  header.proto  image.proto  imu.proto  jointstate.proto  kinematic_msgs.proto  magneticfield.proto  odometry.proto  pose.proto  pressure.proto  quaternion.proto  range.proto  satnav.proto  sensor_msgs.proto  standard_msgs.proto  transform.proto  twist.proto  vector3.proto  wrench.proto
python/: pyproject.toml
python/gecko_messages/: __init__.py  messages.py
src/: calibration_msgs.pb.cc  calibration_msgs.pb.h  camera_msgs.pb.cc  camera_msgs.pb.h  drone_msgs.pb.cc  drone_msgs.pb.h  foxglove_msgs.pb.cc  foxglove_msgs.pb.h  geometry_msgs.pb.cc  geometry_msgs.pb.h  kinematic_msgs.pb.cc  kinematic_msgs.pb.h  math_msgs.pb.cc  math_msgs.pb.h  sensor_msgs.pb.cc  sensor_msgs.pb.h  standard_msgs.pb.cc  standard_msgs.pb.h
tests/: alice.toml  test_msgs.py  test_tuples.py  test_udp.py
