[tool.poetry]
name = "gecko_messages"
version = "2024.02.25"
description = "gecko_messages"
authors = ["walchko <walchko@users.noreply.github.com>"]
readme = "readme.md"
license = "MIT"
homepage = "https://pypi.org/project/gecko-messages/"
repository = 'https://github.com/gecko-robotics/messages'
# documentation = "http://..."
keywords = ["gecko", "messages", "robotics", "serial"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    # 'Programming Language :: Python :: 3.8',
    # 'Programming Language :: Python :: 3.9',
    # 'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks'
]

[tool.poetry.dependencies]
# python = ">=3.8"
python = ">=3.11"
colorama = "*"
jinja2 = "*"
# tomlkit = {version = "*", python = "<3.11"}

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.scripts]
gmsg = 'gecko_messages.bin.gmsg:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
